--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,347 +1,186 @@
-* {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-}
+/* =============================================================================
+ *
+ * Waybar configuration
+ *
+ * Configuration reference: https://github.com/Alexays/Waybar/wiki/Configuration
+ *
+ * =========================================================================== */
 
-window#waybar {
-    background-color: rgba(43, 48, 59, 0);
-    /*border-bottom: 3px solid rgba(100, 114, 125, 0.5);*/
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
-}
+/* -----------------------------------------------------------------------------
+ * Keyframes
+ * -------------------------------------------------------------------------- */
 
-window#waybar.hidden {
-    opacity: 0.2;
-}
+@define-color highlight #685878 ;
+@define-color base1  #19191e ;
 
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
+@keyframes blink-warning {
+    70% {
+        color: white;
+    }
 
-/*window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-}
-*/
-button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
-    border: none;
-    border-radius: 0;
-}
-
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-    background: inherit;
-    box-shadow: inset 0px -3px #ffffff;
-}
-
-
-#workspaces {
-    padding: 0px 0px;
-    margin: 0px 0px;
-}
-
-#workspaces button.active {
-    color: #1793d1;
-    border-bottom: 1px solid #ffffff;
-}
-
-
-#workspaces button {
-    background-color: transparent;
-    color: #ffffff;
-}
-/*
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.urgent {
-    background-color: #eb4d4b;
-}
-*/
-
-#mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
-}
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
-#mpris,
-#load,
-#power-profile-daemon,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#mpd {
-    padding: 0px 5px;
-    color: #ffffff;
-}
-
-#window{
-    margin: 0px 4px;
-}
-
-#custom-vpn {
-    padding: 0px 5px;
-    color: #00ff00;
-}
-
-#custom-streamplay {
-    font-size: 20px;
-    padding: 0px 5px;
-    color: #ffffff;
-}
-
-#custom-gsconnect {
-    font-size: 13px;
-    padding: 0px 5px;
-    color: #ffffff;
-}
-
-
-/*#custom-niri_workspaces{
-    font-size: 18px;
-    padding: 0px 5px;
-    color: #ffffff;
-}*/
-
-
-#custom-logout{
-    font-size: 13px;
-    padding: 0px 5px;
-}
-
-#custom-gsconnect {
-    font-size: 13px;
-}
-
-#taskbar {
-    padding: 0px 0px;
-    margin: 0px 0px;
-    color: #ffffff;
-}
-
-#taskbar button {
-    padding: 0px 2px 0px 3px;
-    margin: 0px 0px 0px 0px;
-    color: #ffffff;
-}
-#taskbar button.active {
-    border-bottom: 1px solid #ffffff
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
-
-#clock {
-    font-size: 12px;
-    color: #ffffff;
-}
-/*
-#battery {
-    background-color: #ffffff;
-    color: #000000;
-}
-
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
-}
-*/
-
-@keyframes blink {
     to {
-        background-color: #ffffff;
-        color: #000000;
+        color: white;
+        background-color: orange;
     }
 }
 
-#battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
+@keyframes blink-critical {
+    70% {
+      color: white;
+    }
+
+    to {
+        color: white;
+        background-color: red;
+    }
+}
+
+/* -----------------------------------------------------------------------------
+ * Base styles
+ * -------------------------------------------------------------------------- */
+
+/* Reset all styles */
+* {
+    border: none;
+    border-radius: 0;
+    min-height: 0;
+    margin: 1px;
+    padding: 0;
+}
+
+/* The whole bar */
+#waybar {
+    background: transparent;
+    color: #e3e3ea;
+    background-color: @base1;
+    font-family: JetBrainsMono;
+    font-size: 13px;
+}
+
+/* Every modules */
+#mode,
+#network,
+#custom-keyboard-layout,
+#idle_inhibitor,
+#cpu,
+#memory,
+#backlight,
+#pulseaudio,
+#battery,
+#clock,
+#tray {
+    padding:0.5rem 0.6rem;
+    margin: 1px 0px;
+}
+
+/* -----------------------------------------------------------------------------
+ * Module styles
+ * -------------------------------------------------------------------------- */
+
+#custom-launcher {
+    margin-left:15px;
+    margin-right:10px;
+}
+
+#workspaces {
+    font-size:13px;
+}
+
+#workspaces button {
+    border-radius: 5px;
+    color: #eceff4;
+    padding: 1px 6px;
+    margin-right: 2px;
+    margin-left: 2px;
+}
+
+#workspaces button.focused {
+    border: 1px solid #d8dee9;
+}
+
+#workspaces button.urgent {
+    border-color: #c9545d;
+    color: #c9545d;
+}
+
+#mode {
+    background: @highlight;
+    border-bottom: 3px transparent;
+    color:white;
+    margin-left: 5px;
+    padding: 7px;
+}
+
+#window {
+    font-weight: bold;
+}
+
+#network.disconnected {
+    color: orange;
+}
+
+#cpu.warning {
+    color: orange;
+}
+
+#cpu.critical {
+    color: red;
+}
+
+#memory {
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
 
-label:focus {
-    background-color: #000000;
+#memory.warning {
+    color: orange;
+ }
+
+#memory.critical {
+    color: red;
+    animation-name: blink-critical;
+    animation-duration: 2s;
+    padding-left:5px;
+    padding-right:5px;
 }
 
-/*
-#cpu {
-    background-color: #2ecc71;
+#backlight.icon {
 }
 
-#memory {
-    background-color: #9b59b6;
-}
-
-#disk {
-    background-color: #964B00;
-}
-
-#backlight {
-    background-color: #90b1b1;
-}
-
-#network {
-    background-color: #2980b9;
-}
-*/
-
-#network.disconnected {
-    background-color: #f53c3c;
-}
-
-/*
 #pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
-}*/
+}
 
 #pulseaudio.muted {
-    background-color: #ffff00;
-    color: #2a5c45;
+    color: @highlight;
 }
 
-#wireplumber {
-    background-color: #fff0f5;
-    color: #000000;
+#battery {
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
-#wireplumber.muted {
-    background-color: #f53c3c;
+#battery.warning {
+    color: orange;
 }
 
-/*
-#custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
+#battery.critical {
+    color: red;
 }
 
-#custom-media.custom-spotify {
-    background-color: #66cc99;
+#battery.warning.discharging {
+    animation-name: blink-warning;
+    animation-duration: 3s;
 }
 
-#custom-media.custom-vlc {
-    background-color: #ffa000;
+#battery.critical.discharging {
+    animation-name: blink-critical;
+    animation-duration: 2s;
 }
 
-#temperature {
-    background-color: #f0932b;
-}
-*/
-#temperature.critical {
-    background-color: #eb4d4b;
-}
-
-/*
-#tray {
-    background-color: #2980b9;
-}
-*/
-
-#tray > .passive {
-    -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-    background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
-}
-
-#mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
-}
-
-#mpd.disconnected {
-    background-color: #f53c3c;
-}
-
-#mpd.stopped {
-    background-color: #90b1b1;
-}
-
-#mpd.paused {
-    background-color: #51a37a;
-}
-
-#language {
-    font-size: 15px;
-}
-
-#keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0px;
-    margin: 0px 5px;
-    min-width: 16px;
-}
-
-#keyboard-state > label {
-    padding: 0px 5px;
-}
-
-#keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-    background-color: transparent;
+#custom-power {
+    margin-left:15px;
+    margin-right:15px;
+    font-size:15px;
 }
